--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@ckeditor/ckeditor5-react": "^11.0.0",
     "@tailwindcss/vite": "^4.1.14",
+    "axios": "^1.12.2",
     "ckeditor5": "^47.1.0",
     "ckeditor5-premium-features": "^47.1.0",
     "react": "^19.1.1",
